Record and substance handler, more user endpoints
